# coursework_bd

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: api_handler.py  database_setup.py  db_manager.py  main.py  user_interface.py
